# keisan

./: CMakeLists.txt  Doxyfile  README.md  README_8md.html  angle_2angle_8hpp.html  angle_2angle_8hpp_source.html  angle_8hpp.html  angle_8hpp_source.html  angle_8impl_8hpp.html  angle_8impl_8hpp_source.html  annotated.html  classes.html  classkeisan_1_1Angle-members.html  classkeisan_1_1Angle.html  classkeisan_1_1Kalman-members.html  classkeisan_1_1Kalman.html  classkeisan_1_1Matrix-members.html  classkeisan_1_1Matrix.html  classkeisan_1_1Polynom-members.html  classkeisan_1_1Polynom.html  classkeisan_1_1Spline-members.html  classkeisan_1_1Spline.html  classkeisan_1_1SquareMatrix-members.html  classkeisan_1_1SquareMatrix.html  classkeisan_1_1Transform2-members.html  classkeisan_1_1Transform2.html  classkeisan_1_1Vector-members.html  classkeisan_1_1Vector.html  constant_8hpp.html  constant_8hpp_source.html  dir_55f66ca9a4d96a8415632833bb34640e.html  dir_5a191dde8b8de48fee62200c59f93814.html  dir_5a7b4ec4efbd24b218493a6575bd5548.html  dir_ab41049d213b997739a9d88b0f473239.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fa7f94fea670fd4215ea37596c6ab36f.html  equation_8hpp.html  equation_8hpp_source.html  euler_8hpp.html  euler_8hpp_source.html  (+75 more)
.github/workflows/: build-and-test.yml  ci.yml  deploy-debian-nightly.yml  deploy-debian-stable.yml  deploy-documentation.yml
include/keisan/: angle.hpp  constant.hpp  interpolation.hpp  kalman.hpp  keisan.hpp  matrix.hpp  number.hpp  number.impl.hpp  point_2.hpp  point_3.hpp  spline.hpp  transform2.hpp
include/keisan/angle/: angle.hpp  angle.impl.hpp  angle_type.hpp  equation.hpp  euler.hpp  euler.impl.hpp  euler_angles.hpp  pi.hpp  quaternion.hpp  quaternion.impl.hpp  trigonometry.hpp  trigonometry.impl.hpp
include/keisan/geometry/: point_2.hpp  point_3.hpp  transform2.hpp
include/keisan/interpolation/: polynom.hpp  polynom.impl.hpp  spline.hpp  spline.impl.hpp
include/keisan/matrix/: matrix.hpp  matrix.impl.hpp  matrix_3d.hpp  square_matrix.hpp  vector.hpp  vector.impl.hpp
include/keisan/spline/: polynom.hpp  smooth_spline.hpp  spline.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  (+36 more)
src/: angle.cpp  constant.cpp  kalman.cpp  number.cpp  point_2.cpp  point_3.cpp  transform2.cpp
src/angle/: angle.cpp  equation.cpp  euler.cpp  euler_angles.cpp  pi.cpp  quaternion.cpp  trigonometry.cpp
src/geometry/: point_2.cpp  point_3.cpp  transform2.cpp
src/interpolation/: polynom.cpp  spline.cpp
src/matrix/: matrix.cpp  matrix_3d.cpp
src/spline/: polynom.cpp  smooth_spline.cpp  spline.cpp
test/: angle_test.cpp  constant_test.cpp  number_test.cpp  point_2_test.cpp  point_3_test.cpp  transform2_test.cpp
test/angle/: angle_test.cpp  euler_angles_test.cpp  euler_test.cpp  pi_test.cpp  quaternion_test.cpp  trigonometry_test.cpp
test/comparison/: almost_equal.hpp  angle.hpp  point_2.hpp  point_3.hpp
test/geometry/: point_2_test.cpp  point_3_test.cpp  transform2_test.cpp
test/matrix/: matrix_3d_inverse_test.cpp  matrix_3d_test.cpp  matrix_inverse_test.cpp  matrix_test.cpp  matrix_transformation_test.cpp  square_matrix_test.cpp  vector_test.cpp
